linkerd-viz/2025.7.4/examples/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linkerd-viz-ingress
  namespace: linkerd
spec:
  ingressClassName: nginx
  rules:
    - host: linkerd.sm.wanaia.net
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: web
                port:
                  number: 8084
